--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-echo '{
+{
   "name": "ai-chatbot",
   "version": "1.0.0",
   "scripts": {
@@ -7,6 +7,6 @@ echo '{
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^1.6.2"
+    "node-fetch": "^3.0.0"
   }
-}' > package.json
+}
